[gd_scene load_steps=4 format=3 uid="uid://fackfa37wlof"]

[ext_resource type="Script" path="res://coffee/cold/1_ice/ice.gd" id="1_vl8ju"]
[ext_resource type="Texture2D" uid="uid://y2h6btntqetm" path="res://assets/tall_glass.png" id="1_xga8w"]
[ext_resource type="Texture2D" uid="uid://ba2f752xahy8s" path="res://assets/Assets finalizados/Gelo.png" id="3_n6m6w"]

[node name="Ice" type="Node2D"]
script = ExtResource("1_vl8ju")

[node name="TallGlass" type="Sprite2D" parent="."]
position = Vector2(224, 416)
texture = ExtResource("1_xga8w")

[node name="AddIceButton" type="Button" parent="."]
offset_left = 488.0
offset_top = 416.0
offset_right = 768.0
offset_bottom = 642.0
icon = ExtResource("3_n6m6w")

[node name="IceCounterLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 144.0
offset_top = 80.0
offset_right = 184.0
offset_bottom = 103.0
text = "Cubos de gelo: 0"

[node name="Next" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 896.0
offset_top = 448.0
offset_right = 1089.0
offset_bottom = 575.0
text = "NEXT"

[connection signal="pressed" from="AddIceButton" to="." method="_on_add_ice_button_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
